# UriLibOld

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/UriLib/test/: test.cpp  test.h
tests/: CMakeLists.txt  test.cpp
tools/: format.sh
